<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Just Java</string>
    <string name="main_header" translatable="false">Online Coffee Shop</string>
    <string name="name_field_hint">Name</string>
    <string name="quantity_control">Enter quantity:</string>
    <string name="sugar_bar_text">Want sugar?</string>
    <string name="milk_bar_text">Want milk?</string>
    <string name="toppings">Toppings:</string>
    <string name="essentials">Essentials:</string>
    <string name="cream_bar">Want Whipped Cream?</string>
    <string name="chocolate_bar">Want Chocolate?</string>
    <string name="order_button_text">order</string>
    <string name="toast_above100">"We can\'t deliver more than 100 cups of Coffee"</string>
    <string name="toast_subzero">You can\'t order 0 cups of coffee</string>
    <string name="order_subject"><xliff:g id="name" example="Amy">%s</xliff:g>\'s Coffee Order</string>
    <string name="order_quantity">Quantity: </string>
    <string name="order_summary">Order Summary:</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="total">Total: </string>
    <string name="thank_you">Thank you for ordering with Online Coffee Shop</string>
    <string name="yes">YES</string>
    <string name="No">NO</string>
</resources>
