<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shop_title"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/main_header"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="showOnMap"/>

    <EditText
        android:id="@+id/name_field"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shop_title"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:hint="@string/name_field_hint"/>

    <LinearLayout

        android:id="@+id/quantity_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_field"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/headers"
            android:id="@+id/enter_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/quantity_control"
            />

        <Button
            android:id="@+id/button_minus"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="decrement"
            android:text="-"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_plus"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="increment"
            android:text="+"/>

    </LinearLayout>

    <TextView
        android:id="@+id/essentials"
        style="@style/headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity_control"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/essentials"
        />

    <LinearLayout

        android:id="@+id/sugar_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/essentials"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/sugar"
            style="@style/headers.subtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:text="@string/sugar_bar_text"/>

        <ToggleButton
            android:id="@+id/sugar_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="includeSugar"
            android:textOff="@string/No"
            android:textOn="@string/yes" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/milk_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sugar_bar"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/milk"
            style="@style/headers.subtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:text="@string/milk_bar_text"/>

        <ToggleButton
            android:id="@+id/milk_button"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="includeMilk"
            android:textOff="@string/No"
            android:textOn="@string/yes"/>


    </LinearLayout>

    <LinearLayout

        android:id="@+id/toppings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/milk_bar"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            style="@style/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/whip"
            style="@style/headers.subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cream_bar"
            android:onClick="hasWhippedCream"/>

        <CheckBox
            android:id="@+id/choco"
            style="@style/headers.subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_bar"
            android:onClick="hasChocolate"/>

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        style="@style/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="submitOrder"
        android:text="@string/order_button_text"/>

</RelativeLayout>

